<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/event_post_titleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:hint="@string/event_post_title" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="right" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_event_on"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/event_post_calendardayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="6dp"
                android:text="@string/evnt_post_calendarday" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_event_at"
                android:layout_marginLeft="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            
            <Button
                android:id="@+id/event_post_timeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="6dp"
                android:text="@string/event_post_time" />
        </LinearLayout>

        <Button
            android:id="@+id/event_post_addendtimeBtn"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/event_post_endtime"
            android:background="@null"
            android:textColor="@color/apptheme_color" />

        
        <EditText
            android:id="@+id/event_post_descET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:hint="@string/event_post_desc"
            android:inputType="textMultiLine" />

        <CheckBox
            android:id="@+id/event_post_rsvpCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/event_post_allowrsvp" />

        <Button
            android:layout_gravity="right"
            android:id="@+id/event_post_cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:text="@string/event_post_cancel" />
    </LinearLayout>

</ScrollView>